// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@list-item: template matches snapshot * description 1`] = `
<Wrapper
  description="Description"
  forwardedRef={null}
  index={0}
  style={
    Array [
      undefined,
      Object {},
      undefined,
    ]
  }
/>
`;

exports[`@list-item: template matches snapshot * text styles 1`] = `
<Wrapper
  description="Description"
  descriptionStyle={
    Object {
      "color": "blue",
      "letterSpacing": 6,
    }
  }
  forwardedRef={null}
  index={0}
  style={
    Array [
      undefined,
      Object {},
      undefined,
    ]
  }
  title="Title"
  titleStyle={
    Object {
      "fontSize": 22,
      "lineHeight": 24,
    }
  }
/>
`;

exports[`@list-item: template matches snapshot * title 1`] = `
<Wrapper
  forwardedRef={null}
  index={0}
  style={
    Array [
      undefined,
      Object {},
      undefined,
    ]
  }
  title="Title"
/>
`;

exports[`@list-item: template matches snapshot * with accessory 1`] = `
<Wrapper
  accessory={[Function]}
  description="Description"
  forwardedRef={null}
  index={0}
  style={
    Array [
      undefined,
      Object {},
      undefined,
    ]
  }
  title="Title"
/>
`;

exports[`@list-item: template matches snapshot * with icon 1`] = `
<Wrapper
  description="Description"
  forwardedRef={null}
  icon={[Function]}
  index={0}
  style={
    Array [
      undefined,
      Object {},
      undefined,
    ]
  }
  title="Title"
/>
`;
